# Medicine-Cabinet

./: AUTO_CONTEXT_FLOW.md  CHANGES_2025-10-26.md  LICENSE  MEDICINE_CABINET_CHANGES.md  PYTHON_CHANGES.md  README.md  __init__.py  architecture_notes.md  auto_session_tracker.py  calculate_sizes.py  capsule_health_check.py  cleanup_scheduler.py  cli.py  context_capsule.py  context_deduplication.py  context_efficiency.md  context_manager.py  install_native_host.sh  load_context.py  native_host.py  native_messaging_setup.md  session_tracker.py  setup_extension.py  storage_analysis.md  storage_limits.py  tablet.py  view_session.py
chrome-extension/: PUBLISHING.md  QUICK_START.md  README.md  generate_icons.py  manifest.json  publishing.md
edge-extension/: manifest.json
examples/: quick_start.py
firefox-extension/: README.md  manifest.json
jetbrains-plugin/: README.md  build.gradle.kts  quick_start.md  settings.gradle.kts
medicine_cabinet/: README.md  inspector.py  pyproject.toml  setup.py  tablet.py
medicine_cabinet/examples/: quick_start.py
native-messaging/: com.medicinecabinet.host.firefox.json  com.medicinecabinet.host.json
safari-extension/: DEVELOPMENT_SUMMARY.md  QUICK_START.md  README.md  development_summary.md  generate_icons.py  manifest.json  quick_start.md  setup.sh  test.html
sessions/: auto_session_20251026_213646.auratab  persistent_20251026.auratab
sublime-extension/: .sublime-keymap  Context.sublime-menu  Main.sublime-menu  README.md  auractx.sublime-syntax  auratab.sublime-syntax  medicine_cabinet_plugin.py
vscode-extension/: README.md  (+2 more)
(+31 files in other folders)
