[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medicine-cabinet"
version = "0.1.0"
description = "Portable AI agent memory system with Tablets and Capsules"
authors = [{name = "Todd Hendricks"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/hendrixx-cnc/medicine-cabinet"
Repository = "https://github.com/hendrixx-cnc/medicine-cabinet"
